<?xml version="1.0"?>
<package>
  <name>pilz_extensions</name>
  <version>0.3.6</version>
  <description>
  The pilz_extensions package. Here are classes extending the functionality of other packages.
  On the long run these extensions should become pull requests on the respective packages.
  </description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="h.slusarek@pilz.de">Hagen Slusarek</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/pilz_extensions</url>
  <url type="bugtracker">https://github.com/PilzDE/pilz_industrial_motion/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_industrial_motion</url>

  <build_depend>roscpp</build_depend>
  <build_depend>joint_limits_interface</build_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>code_coverage</test_depend>
  <run_depend>prbt_support</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
