<?xml version="1.0"?>
<package>
  <name>pilz_industrial_motion_testutils</name>
  <version>0.3.2</version>
  <description>Helper scripts and functionality to test industrial motion generation</description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="h.slusarek@pilz.de">Hagen Slusarek</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/pilz_industrial_motion</url>
  <url type="bugtracker">https://github.com/PilzDE/pilz_industrial_motion/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_industrial_motion</url>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>pilz_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <build_depend>pilz_msgs</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
