<?xml version="1.0"?>
<package>
  <name>pilz_msgs</name>
  <version>0.2.1</version>
  <description>The pilz_msgs package</description>

  <maintainer email="ros@pilz.de">Pilz GmbH and Co. KG</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/pilz_industrial_motion</url>
  <url type="bugtracker">https://github.com/PilzDE/pilz_industrial_motion/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_industrial_motion</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_msgs</run_depend>

</package>
