<?xml version="1.0"?>
<package format="3">
  <name>pilz_robot_programming</name>
  <version>0.4.11</version>
  <description>
  An Easy to use API to execute standard industrial robot commands like Ptp, Lin, Circ and Sequence using Moveit.
  </description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.henkel@pilz.de">Christian Henkel</maintainer>
  <maintainer email="h.slusarek@pilz.de">Hagen Slusarek</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>

  <license>LGPLv3</license>

  <depend>moveit_commander</depend>
  <depend>pilz_msgs</depend>
  <depend>pilz_trajectory_generation</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-psutil</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</depend>
  <depend>rospy</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <test_depend>rostest</test_depend>
  <test_depend>pilz_industrial_motion_testutils</test_depend>
  <test_depend>prbt_moveit_config</test_depend>
  <test_depend>prbt_pg70_support</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-coverage</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-coverage</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-docopt</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-docopt</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-mock</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>code_coverage</test_depend>


</package>
