<?xml version="1.0"?>
<package>
  <name>pilz_robot_programming</name>
  <version>0.4.14</version>
  <description>
  An Easy to use API to execute standard industrial robot commands like Ptp, Lin, Circ and Sequence using Moveit.
  </description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.henkel@pilz.de">Christian Henkel</maintainer>
  <maintainer email="h.slusarek@pilz.de">Hagen Slusarek</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>

  <license>LGPLv3</license>

  <run_depend>moveit_commander</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pilz_industrial_motion_planner</run_depend>
  <run_depend>pilz_msgs</run_depend>
  <run_depend>python-psutil</run_depend>
  <run_depend>rospy</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>

  <test_depend>python-docopt</test_depend>
  <test_depend>pilz_industrial_motion_testutils</test_depend>
  <test_depend>python-coverage</test_depend>
  <test_depend>python-mock</test_depend>
  <test_depend>prbt_hardware_support</test_depend>
  <test_depend>prbt_moveit_config</test_depend>
  <test_depend>prbt_pg70_support</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>code_coverage</test_depend>


</package>
