<?xml version="1.0"?>
<package format="2">
  <name>pilz_store_positions</name>
  <version>0.4.13</version>
  <description>Allows to store poses during teach-in.</description>

  <maintainer email="j.schleicher@pilz.de">Joachim Schleicher</maintainer>
  <maintainer email="r.feistenauer@pilz.de">Richard Feistenauer</maintainer>
  <maintainer email="t.vetter@pilz.de">Tobias Vetter</maintainer>

  <license>LGPLv3</license>

  <url type="bugtracker">https://github.com/PilzDE/pilz_industrial_motion/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_industrial_motion</url>  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>yaml</exec_depend>

  <test_depend>python-mock</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>ros_pytest</test_depend>
  <test_depend>visualization_msgs</test_depend>
  <test_depend>code_coverage</test_depend>
  <test_depend>python-pytest-cov</test_depend>
</package>
